# xplwemo

./: .gitmodules  CMakeLists.txt  GPIOInput.cpp  GPIOInput.h  GPIOPin.cpp  GPIOPin.h  WeMoDevice.cpp  WeMoDevice.h  main.cpp  src.kdev4
src/: CMakeLists.txt  Doxyfile.in  LcdDevice.cpp~  LcdDevice.h~  WeMoDevice.cpp~  WeMoDevice.h  WeMoDevice.h~  main.cpp  main.cpp~  src.kdev4
src/.kdev4/: _custom.kdev4  src.kdev4
src/xPLsdk/: .gitignore  README.md
src/xPLsdk/src/: CMakeLists.txt  EventLog.cpp  EventLog.h  RegUtils.cpp  RegUtils.h  Service.cpp  Service.h  XMLUtils.cpp  XMLUtils.h  projconfig.h.in  xplComms.cpp  xplComms.h  xplConfigItem.cpp  xplConfigItem.h  xplCore.h  xplDevice.cpp  xplDevice.h  xplFilter.cpp  xplFilter.h  xplMsg.cpp  xplMsg.h  xplStringUtils.cpp  xplStringUtils.h  xplUDP.cpp  xplUDP.h
src/xPLsdk/src/test/: ConsoleApp.cpp
src/xPLsdk/xplsds_winorig/Docs/: xPLSDK.chm
src/xPLsdk/xplsds_winorig/Samples/ConsoleApp/: ConsoleApp.cpp  ConsoleApp.sln  ConsoleApp.vcproj
src/xPLsdk/xplsds_winorig/Samples/ServiceApp/: ServiceApp.cpp  ServiceApp.h  ServiceApp.sln  ServiceApp.vcproj  event.RES
src/xPLsdk/xplsds_winorig/Samples/WindowApp/: Event.mc  Resource.h  WindowApp.aps  WindowApp.cpp  WindowApp.h  WindowApp.rc  WindowApp.sln  WindowApp.vcproj  event.aps  event.h
src/xPLsdk/xplsds_winorig/Samples/xPLW800/: SensorManager.cpp  SensorManager.h  W800.cpp  W800.h  W800RF32.cpp  W800RF32.h  pcremote.xml  security.xml  xPLW800.sln  xPLW800.vcproj
src/xPLsdk/xplsds_winorig/Src/: EventLog.cpp  EventLog.h  RegUtils.cpp  RegUtils.h  Service.cpp  Service.h  XMLUtils.cpp  XMLUtils.h  xplComms.cpp  xplComms.h  xplConfigItem.cpp  xplConfigItem.h  xplCore.h  xplDevice.cpp  xplDevice.h  xplFilter.cpp  xplFilter.h  xplMsg.cpp  xplMsg.h  xplMsgItem.cpp  xplMsgItem.h  xplRef.h  xplStringUtils.cpp  xplStringUtils.h  xplUDP.cpp  xplUDP.h
